<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>com.iu.db.indexes</groupId>
    <artifactId>performance-db</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>db-server</artifactId>
  <packaging>pom</packaging>

  <modules>
    <module>db-server-common</module>
    <module>indexes</module>
    <module>tasks</module>
    <module>server-service</module>
    <module>server-instance</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs><arg>--enable-preview</arg></compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
